<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2016 Jordon de Hoog
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Garage Pi</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="never_updated">Never</string>

    <string name="dialog_no_user_title">Login needed</string>
    <string name="dialog_no_user_content">Either this is your first run, or you have not entered any login credentials.  Press okay to login.</string>
    <string name="dialog_okay">Okay</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="dialog_authenticate_title">Authenticating</string>
    <string name="dialog_wait">Please wait…</string>

    <string name="dialog_sure">Are you sure?</string>
    <string name="dialog_logout_content">This will log you out and disable functionality.</string>

    <string name="success_token_refresh">Successfully refreshed authentication token</string>
    <string name="success_login">Login was successful</string>
    <string name="success_logout">Successfully logged out.</string>

    <string name="error_invalid_address">Invalid server address</string>
    <string name="error_token_refresh">Refreshing token failed.</string>

    <!-- Strings related to Settings -->

    <string name="pref_category_title_server">Server</string>
    <string name="pref_category_title_updates">Updates</string>
    <string name="pref_category_title_about">About</string>
    <string name="pref_category_key_about">pref_key_settings_about</string>
    <string name="pref_category_key_updates">pref_key_update_settings</string>
    <string name="pref_category_key_server">pref_key_server_settings</string>
    <string name="pref_key_updates_check">pref_key_updates_check</string>
    <string name="pref_summary_updates_check">Last checked:</string>
    <string name="pref_title_updates_check">Check for update</string>
    <string name="pref_title_updates_auto">Automatically check for updates</string>
    <string name="pref_key_about_author">pref_key_author</string>
    <string name="pref_summary_about_author">Jordon de Hoog</string>
    <string name="pref_title_about_author">Author</string>
    <string name="pref_key_about_source">pref_key_about_source</string>
    <string name="pref_title_about_source">View source</string>
    <string name="pref_key_server_address">pref_key_server_address</string>
    <string name="pref_key_account_email">pref_key_general_email</string>
    <string name="pref_key_account_password">pref_key_general_password</string>
    <string name="pref_title_account_email">Email</string>
    <string name="pref_title_account_password">Password</string>
    <string name="pref_title_account_token">Auth Token</string>
    <string name="pref_category_key_general">pref_category_key_general</string>
    <string name="pref_category_title_general">General</string>
    <string name="pref_key_updates_version">pref_key_updates_version</string>
    <string name="pref_title_updates_version">Version</string>
    <string name="pref_title_server_address">Address</string>
    <string name="pref_title_server_port">Port</string>
    <string name="pref_key_server_port">pref_key_server_port</string>
    <string name="pref_key_account_token">pref_key_account_token</string>
    <string name="pref_summary_account_token">Last updated:</string>
    <string name="pref_key_account_authenticate">pref_key_account_authenticate</string>
    <string name="pref_summary_account_authenticate">Get a new token and authenticate with the server now.</string>
    <string name="pref_summary_title_authenticate">Authenticate Now</string>
    <string name="pref_summary_updates_unstable">WARNING: This will enable a less stable version of the application.</string>
    <string name="pref_title_updates_unstable">Use developer build</string>
    <string name="pref_key_updates_unstable">pref_key_updates_unstable</string>
    <string name="pref_key_updates_auto">pref_key_misc_auto_update</string>
    <string name="pref_key_account_logout">pref_key_account_logout</string>
    <string name="pref_summary_account_logout">This will delete all authentication information.</string>
    <string name="pref_title_account_logout">Logout</string>
    <string name="auth_message_no_internet">No internet connection is available.</string>
    <string name="auth_message_invalid_credentials">Email or password is empty</string>
    <string name="not_implemented">Not yet implemented</string>
    <string name="error_auth_invalid">Login failed, invalid email or password.</string>
    <string name="success_auth">Successfully logged in.</string>
    <string name="dialog_missing_cred">Missing Credentials</string>
    <string name="dialog_missing_cred_content">You have not entered valid credentials, press okay to go back to settings.</string>
    <string name="no_update">No update needed</string>
    <string name="update_available">A newer version is available!</string>
    <string name="magic_is_happening">Magic is happening!</string>
    <string name="update_available_title">Update Available</string>
    <string name="update_available_content">A new update is available, press update to continue.</string>
    <string name="update_available_positive">Update</string>
    <string name="cancel">Cancel</string>
    <string name="update_started">Update download has started</string>
    <string name="download_failed">"Download failed "</string>
    <string name="error_cache_directory">Could not get cache directory</string>
    <string name="update_finished">Update download has finished</string>
    <string name="check_failed">Update check failed</string>

    <string name="request_failed">Request failed</string>
    <string name="socket_connect_failed">SocketIO failed to connect</string>
    <string name="door_status_text">Door is</string>
    <string name="door_name_placeholder">Limo</string>
    <string name="desc_door_view_image">Arrow indicating action</string>
    <string name="door_view_default_name">Name</string>
    <string name="door_view_default_status">Status</string>
    <string name="door_view_status_open">Open</string>
    <string name="door_view_status_close">Close</string>
    <string name="pref_key_server_mock">pref_key_server_mock_toggle</string>
    <string name="pref_title_server_mock">Mock Door Toggles</string>
    <string name="pref_summary_server_mock">Disables the ability to toggle the doors, used for testing.</string>
    <string name="action_fullscreen">Fullscreen</string>
    <string name="content_desc_camera_feed">Images from camera feed</string>
    <string name="content_desc_camera_play_stop">Play or stop the camera feed</string>
    <string name="content_desc_refresh_camera">Refresh camera feed</string>
    <string name="pref_category_title_appearance">Appearance</string>

    <string name="pref_key_appearance_theme">pref_key_appearance_theme</string>
    <string name="pref_summary_appearance_theme">Enable or disable automatic night/day mode</string>
    <string name="pref_title_appearance_theme">Theme mode</string>
    <string-array name="pref_entries_appearance_theme">
        <item>Auto</item>
        <item>Day Mode</item>
        <item>Night Mode</item>
    </string-array>
    <string-array name="pref_entries_values_appearance_theme">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
